Completado, solo faltan los try catch y crear el readme